css fixes on spacing

--- a/frontend/src/components/css/Browse/filter.css
+++ b/frontend/src/components/css/Browse/filter.css
@@ -66,6 +66,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  gap: .5rem;
+  margin-top: 1rem;
 }
 
 @media only screen and (max-width: 1100px) {
