--- a/frontend/src/components/css/Browse/multiOptionDropdown.css
+++ b/frontend/src/components/css/Browse/multiOptionDropdown.css
@@ -69,6 +69,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: .5rem;
+  margin-top: .5rem;
 }
 
 .dropdown-container {
